Mostly rewritten. TONS of automation added. Added ability to inject true dependencies. And a million other things.